@@ -26,6 +26,7 @@ import java.util.regex.Pattern;
  * @author Krikor Krumlian
  * @see Strategy Pattern, Template Pattern
  */
+@SuppressWarnings("all")
 public abstract class OidGenerator {
 
     @Override
@@ -71,7 +72,7 @@ public abstract class OidGenerator {
             input = "";
         if (!input.endsWith("_"))
             input = input + "_";
-        input = input + new Double((Math.random() * 10000)).intValue();
+        input = input + Double.valueOf((Math.random() * 10000)).intValue();
         return input;
     }
 
