@@ -36,6 +36,7 @@ import at.ac.meduniwien.ophthalmology.libreclinica.dao.submit.SubjectDAO;
  * 
  * 
  */
+@SuppressWarnings("all")
 public class AuditEventDAO extends AuditableEntityDAO<AuditEventBean> {
     // private DAODigester digester;
 
@@ -136,19 +137,19 @@ public class AuditEventDAO extends AuditableEntityDAO<AuditEventBean> {
     public AuditEventBean setStudyAndSubjectInfo(AuditEventBean aeb) {
         if (aeb.getStudyId() > 0) {
             StudyDAO sdao = new StudyDAO(this.ds);
-            StudyBean sbean = (StudyBean) sdao.findByPK(aeb.getStudyId());
+            StudyBean sbean = sdao.findByPK(aeb.getStudyId());
             aeb.setStudyName(sbean.getName());
         }
         if (aeb.getSubjectId() > 0) {
             SubjectBean subbean = new SubjectBean();
             SubjectDAO subdao = new SubjectDAO(this.ds);
-            subbean = (SubjectBean) subdao.findByPK(aeb.getSubjectId());
+            subbean = subdao.findByPK(aeb.getSubjectId());
             aeb.setSubjectName(subbean.getName());
         }
         if (aeb.getUserId() > 0) {
             UserAccountBean updater = new UserAccountBean();
             UserAccountDAO uadao = new UserAccountDAO(this.ds);
-            updater = (UserAccountBean) uadao.findByPK(aeb.getUserId());
+            updater = uadao.findByPK(aeb.getUserId());
             aeb.setUpdater(updater);
         }
         return aeb;
@@ -192,7 +193,7 @@ public class AuditEventDAO extends AuditableEntityDAO<AuditEventBean> {
 
     public AuditEventBean findByPK(int id) {
     	String queryName = "findByPK";
-    	return (AuditEventBean) executeFindByPKQuery(queryName);
+    	return executeFindByPKQuery(queryName);
     }
 
     /**
@@ -227,11 +228,11 @@ public class AuditEventDAO extends AuditableEntityDAO<AuditEventBean> {
         // audit_date, user_id, audit_table, entity_id, entity_name, old_value,
         // new_value)
         // VALUES (pk, ?, now(), NEW.update_id, ?, ?, ?, ?, ?);
-        variables.put(new Integer(1), sb.getAuditTable());
-        variables.put(new Integer(2), new Integer(sb.getUserId()));
-        variables.put(new Integer(3), new Integer(sb.getEntityId()));
-        variables.put(new Integer(4), sb.getReasonForChangeKey());
-        variables.put(new Integer(5), sb.getActionMessageKey());
+        variables.put(Integer.valueOf(1), sb.getAuditTable());
+        variables.put(Integer.valueOf(2), Integer.valueOf(sb.getUserId()));
+        variables.put(Integer.valueOf(3), Integer.valueOf(sb.getEntityId()));
+        variables.put(Integer.valueOf(4), sb.getReasonForChangeKey());
+        variables.put(Integer.valueOf(5), sb.getActionMessageKey());
 
         this.executeUpdate(digester.getQuery("create"), variables);
 
@@ -467,7 +468,7 @@ public class AuditEventDAO extends AuditableEntityDAO<AuditEventBean> {
         this.setTypeExpected(1, TypeNames.LONG);
         this.setTypeExpected(2, TypeNames.STRING);
         HashMap<Integer, Object> variables = new HashMap<>();
-        variables.put(new Integer(1), tableName);
+        variables.put(Integer.valueOf(1), tableName);
 
         String sql = digester.getQuery("findAggregatesByTableName");
         logger.debug("sql is: " + sql);
@@ -598,7 +599,7 @@ public class AuditEventDAO extends AuditableEntityDAO<AuditEventBean> {
             // found in the context, tbh
             ebCheck = AuditEventHashMap.get(eb.getId());
             if (ebCheck == null) {
-                AuditEventHashMap.put(new Integer(eb.getId()), eb);
+                AuditEventHashMap.put(Integer.valueOf(eb.getId()), eb);
                 logger.warn("Put into hashmap: " + eb.getId());
                 al.add(eb);
             } else {
