@@ -9,6 +9,8 @@
  */
 package at.ac.meduniwien.ophthalmology.libreclinica.logic.score.function;
 
+@SuppressWarnings("all")
+
 public class Median extends AbstractFunction {
     public Median() {
         super();
@@ -33,7 +35,7 @@ public class Median extends AbstractFunction {
             try {
                 values[i] = Double.parseDouble(arg);
             } catch (Exception e) {
-                errors.put(new Integer(errorCount++), "Unparseable number:" + " " + arg + " " + "in evaluation of" + " Median(); ");
+                errors.put(Integer.valueOf(errorCount++), "Unparseable number:" + " " + arg + " " + "in evaluation of" + " Median(); ");
             }
         }
         if (errors.size() > 0) {
