@@ -11,6 +11,8 @@ package at.ac.meduniwien.ophthalmology.libreclinica.logic.score.function;
 
 import org.apache.commons.math.stat.StatUtils;
 
+@SuppressWarnings("all")
+
 public class Min extends AbstractFunction {
     public Min() {
         super();
@@ -35,7 +37,7 @@ public class Min extends AbstractFunction {
             try {
                 values[i] = Double.parseDouble(arg);
             } catch (Exception e) {
-                errors.put(new Integer(errorCount++), "Unparseable number:" + " " + arg + " " + "in evaluation of" + " Min(); ");
+                errors.put(Integer.valueOf(errorCount++), "Unparseable number:" + " " + arg + " " + "in evaluation of" + " Min(); ");
             }
         }
         if (errors.size() > 0) {
