@@ -35,6 +35,8 @@ import org.quartz.Trigger.TriggerState;
 import org.quartz.TriggerKey;
 import org.quartz.impl.StdScheduler;
 
+@SuppressWarnings("all")
+
 public class ViewSingleJobServlet extends SecureController {
 
     /**
@@ -49,7 +51,6 @@ public class ViewSingleJobServlet extends SecureController {
 
     @Override
     protected void mayProceed() throws InsufficientPermissionException {
-        // TODO copied from CreateJobExport - DRY? tbh
         if (ub.isSysAdmin() || ub.isTechAdmin()) {
             return;
         }
@@ -59,7 +60,7 @@ public class ViewSingleJobServlet extends SecureController {
 //        }
 
         addPageMessage(respage.getString("no_have_correct_privilege_current_study") + respage.getString("change_study_contact_sysadmin"));
-        throw new InsufficientPermissionException(Page.MENU_SERVLET, resexception.getString("not_allowed_access_extract_data_servlet"), "1");// TODO
+        throw new InsufficientPermissionException(Page.MENU_SERVLET, resexception.getString("not_allowed_access_extract_data_servlet"), "1");
         // above copied from create dataset servlet, needs to be changed to
         // allow only admin-level users
 
@@ -125,11 +126,11 @@ public class ViewSingleJobServlet extends SecureController {
                 logger.debug("found email: " + contactEmail);
                 // String datasetId =
                 // dataMap.getString(ExampleSpringJob.DATASET_ID);
-                // int dsId = new Integer(datasetId).intValue();
+                // int dsId = Integer.valueOf(datasetId).intValue();
                 if (gName.equals("") || gName.equals("0")) {
                     String exportFormat = dataMap.getString(XsltTriggerService.EXPORT_FORMAT);
                     String periodToRun = dataMap.getString(ExampleSpringJob.PERIOD);
-                    // int userId = new Integer(userAcctId).intValue();
+                    // int userId = Integer.valueOf(userAcctId).intValue();
                     int dsId = dataMap.getInt(ExampleSpringJob.DATASET_ID);
                     triggerBean.setExportFormat(exportFormat);
                     triggerBean.setPeriodToRun(periodToRun);
