@@ -40,6 +40,7 @@ import at.ac.meduniwien.ophthalmology.libreclinica.web.InsufficientPermissionExc
  * Views selected items for creating dataset, aslo allow user to de-select or
  * select all items in a study
  */
+@SuppressWarnings("all")
 public class ViewSelectedServlet extends SecureController {
 
     /**
@@ -111,12 +112,12 @@ public class ViewSelectedServlet extends SecureController {
         // crfdao, idao);
         // for (int j = 0; j < allItemsInStudy.size(); j++) {
         // ItemBean item = (ItemBean) allItemsInStudy.get(j);
-        // Integer itemId = new Integer(item.getId());
+        // Integer itemId = Integer.valueOf(item.getId());
         // if (!ids.contains(itemId)) {
         // ids.add(itemId);
         // }
         // }
-        session.setAttribute("numberOfStudyItems", new Integer(ids.size()).toString());
+        session.setAttribute("numberOfStudyItems", Integer.valueOf(ids.size()).toString());
 
         ArrayList<ItemBean> items = new ArrayList<>();
         if (db == null || db.getItemIds().size() == 0) {
