@@ -19,6 +19,7 @@ import java.util.HashMap;
  *
  * 
  */
+@SuppressWarnings("all")
 public class FormDiscrepancyNotes {
     private HashMap<String, ArrayList<DiscrepancyNoteBean>> fieldNotes;
     private HashMap<String, Integer> numExistingFieldNotes;
@@ -58,7 +59,7 @@ public class FormDiscrepancyNotes {
         if (notes != null) {
             notes.add(field);
         }
-        idNotes.put(new Integer(entityId), notes);
+        idNotes.put(Integer.valueOf(entityId), notes);
     }
 
     public boolean hasNote(String field) {
@@ -81,7 +82,7 @@ public class FormDiscrepancyNotes {
     }
 
     public void setNumExistingFieldNotes(String field, int num) {
-        numExistingFieldNotes.put(field, new Integer(num));
+        numExistingFieldNotes.put(field, Integer.valueOf(num));
     }
 
     public int getNumExistingFieldNotes(String field) {
