@@ -22,6 +22,7 @@ import at.ac.meduniwien.ophthalmology.libreclinica.view.Page;
  * 
  * @author jxu
  */
+@SuppressWarnings("all")
 public class ChangeDefinitionCRFOrdinalServlet extends ChangeOrdinalServlet {
 
     /**
@@ -45,11 +46,11 @@ public class ChangeDefinitionCRFOrdinalServlet extends ChangeOrdinalServlet {
         increase(current, previous, currOrdinal, prevOrdinal, definitionId, edcdao);
         int siteId = fp.getInt("siteId");
         if (siteId > 0) {
-            request.setAttribute("idToSort", new Integer(definitionId).toString());
+            request.setAttribute("idToSort", Integer.valueOf(definitionId).toString());
             request.setAttribute("siteId", siteId);
             forwardPage(Page.VIEW_SITE_SERVLET);
         } else {
-            request.setAttribute("id", new Integer(definitionId).toString());
+            request.setAttribute("id", Integer.valueOf(definitionId).toString());
             forwardPage(Page.VIEW_EVENT_DEFINITION_SERVLET);
         }
     }
