@@ -40,6 +40,7 @@ import at.ac.meduniwien.ophthalmology.libreclinica.web.bean.StudyEventDefinition
  * @author jxu
  *
  */
+@SuppressWarnings("all")
 public class ListEventDefinitionServlet extends SecureController {
 
     /**
@@ -154,7 +155,7 @@ public class ListEventDefinitionServlet extends SecureController {
         table.computeDisplay();
 
         request.setAttribute("table", table);
-        request.setAttribute("defSize", new Integer(seds.size()));
+        request.setAttribute("defSize", Integer.valueOf(seds.size()));
 
         if (request.getParameter("read") != null && request.getParameter("read").equals("true")) {
             request.setAttribute("readOnly", true);
