@@ -45,6 +45,7 @@ import at.ac.meduniwien.ophthalmology.libreclinica.web.InsufficientPermissionExc
  *
  * Removes a study event and all its related event CRFs, items
  */
+@SuppressWarnings("all")
 public class RemoveStudyEventServlet extends SecureController {
     /**
 	 * 
@@ -83,7 +84,7 @@ public class RemoveStudyEventServlet extends SecureController {
 
         if (studyEventId == 0) {
             addPageMessage(respage.getString("please_choose_a_SE_to_remove"));
-            request.setAttribute("id", new Integer(studySubId).toString());
+            request.setAttribute("id", Integer.valueOf(studySubId).toString());
             forwardPage(Page.VIEW_STUDY_SUBJECT_SERVLET);
         } else {
 
@@ -172,7 +173,7 @@ public class RemoveStudyEventServlet extends SecureController {
 
                 addPageMessage(emailBody);
 //                sendEmail(emailBody);
-                request.setAttribute("id", new Integer(studySubId).toString());
+                request.setAttribute("id", Integer.valueOf(studySubId).toString());
                 forwardPage(Page.VIEW_STUDY_SUBJECT_SERVLET);
             }
         }
@@ -195,7 +196,7 @@ public class RemoveStudyEventServlet extends SecureController {
         int i;
         for (i = 0; i < eventDefinitionCRFs.size(); i++) {
             EventDefinitionCRFBean edc = eventDefinitionCRFs.get(i);
-            definitionsById.put(new Integer(edc.getStudyEventDefinitionId()), edc);
+            definitionsById.put(Integer.valueOf(edc.getStudyEventDefinitionId()), edc);
         }
 
         StudyEventDAO sedao = new StudyEventDAO(sm.getDataSource());
@@ -218,7 +219,7 @@ public class RemoveStudyEventServlet extends SecureController {
             int studyEventId = ecb.getStudyEventId();
             int studyEventDefinitionId = sedao.getDefinitionIdFromStudyEventId(studyEventId);
 
-            EventDefinitionCRFBean edc = (EventDefinitionCRFBean) definitionsById.get(new Integer(studyEventDefinitionId));
+            EventDefinitionCRFBean edc = (EventDefinitionCRFBean) definitionsById.get(Integer.valueOf(studyEventDefinitionId));
 
             DisplayEventCRFBean dec = new DisplayEventCRFBean();
             dec.setFlags(ecb, ub, currentRole, edc.isDoubleEntry());
