@@ -35,6 +35,7 @@ import at.ac.meduniwien.ophthalmology.libreclinica.web.InsufficientPermissionExc
  * @author jxu
  *
  */
+@SuppressWarnings("all")
 public class ViewEventDefinitionServlet extends SecureController {
    /**
 	 * 
@@ -119,7 +120,7 @@ EventDefinitionCrfTagService eventDefinitionCrfTagService = null;
             
             request.setAttribute("definition", sed);
             request.setAttribute("eventDefinitionCRFs", eventDefinitionCRFs);
-            request.setAttribute("defSize", new Integer(eventDefinitionCRFs.size()));
+            request.setAttribute("defSize", Integer.valueOf(eventDefinitionCRFs.size()));
             // request.setAttribute("eventDefinitionCRFs", new
             // ArrayList(tm.values()));
             forwardPage(Page.VIEW_EVENT_DEFINITION);
