@@ -31,7 +31,6 @@ import at.ac.meduniwien.ophthalmology.libreclinica.control.SpringServletAccess;
 import at.ac.meduniwien.ophthalmology.libreclinica.control.core.SecureController;
 import at.ac.meduniwien.ophthalmology.libreclinica.control.form.FormProcessor;
 import at.ac.meduniwien.ophthalmology.libreclinica.control.form.Validator;
-import at.ac.meduniwien.ophthalmology.libreclinica.dao.core.CoreResources;
 import at.ac.meduniwien.ophthalmology.libreclinica.exception.OpenClinicaException;
 import at.ac.meduniwien.ophthalmology.libreclinica.i18n.core.LocaleResolver;
 import at.ac.meduniwien.ophthalmology.libreclinica.view.Page;
@@ -47,6 +46,7 @@ import at.ac.meduniwien.ophthalmology.libreclinica.service.xml.OdmJaxbContext;
  * 
  * @author Krikor Krumlian, Tom Hickerson updated Apr-May 2008
  */
+@SuppressWarnings("all")
 public class ImportCRFDataServlet extends SecureController {
 
     /**
@@ -134,7 +134,6 @@ public class ImportCRFDataServlet extends SecureController {
                 forwardPage(Page.IMPORT_CRF_DATA);
             }
 
-            // TODO
             // validation steps
             // 1. valid xml - validated by file uploader below
 
@@ -176,7 +175,6 @@ public class ImportCRFDataServlet extends SecureController {
                 // different
                 // page if not working
 
-                // TODO this block of code needs the xerces serializer in order
                 // to
                 // work
 
@@ -230,7 +228,6 @@ public class ImportCRFDataServlet extends SecureController {
                     // in the next few parts of the code
                 }
             }
-            // TODO need to output further here
             // 2.a. is the study the same one that the user is in right now?
             // 3. validates against study metadata
             // 3.a. is that study subject in that study?
@@ -258,7 +255,6 @@ public class ImportCRFDataServlet extends SecureController {
 
             }
             logger.debug("passed error check");
-            // TODO ADD many validation steps before we get to the
             // session-setting below
             // 4. is the event in the correct status to accept data import?
             // -- scheduled, data entry started, completed
@@ -316,7 +312,7 @@ public class ImportCRFDataServlet extends SecureController {
                             // need to create a list and inform that one is blocked
                             // and the rest are not...
                             //
-                            permittedEventCRFIds.add(new Integer(eventCRFBean.getId()));
+                            permittedEventCRFIds.add(Integer.valueOf(eventCRFBean.getId()));
                         } else {
                             // fail = true;
                             // addPageMessage(respage.getString(
@@ -432,7 +428,6 @@ public class ImportCRFDataServlet extends SecureController {
                 Validator.addError(errors, "xml_file", "You have to provide an XML file!");
             } else if (f.getName().indexOf(".xml") < 0 && f.getName().indexOf(".XML") < 0) {
                 logger.info("file name:" + f.getName());
-                // TODO change the message below
                 addPageMessage(respage.getString("file_you_uploaded_not_seem_xml_file"));
                 f = null;
             }
