@@ -17,12 +17,12 @@ import java.util.ArrayList;
  * @author thickerson
  *
  */
+@SuppressWarnings("all")
 public class AuditEventRow extends EntityBeanRow<AuditEventBean, AuditEventRow> {
     public static final int AUDIT_DATE = 0;
     public static final int AUDIT_ACTION = 1;
     public static final int AUDIT_ENTITY = 2;
     // public static final int AUDIT_STUDY = 3;
-    // TODO MAKE CUSTOMIZED ROWS FOR EACH ONE, TBH
     // this one will be for user, and therefore not have the user
     // column, tbh
     public static final int AUDIT_STUDY_NAME = 3;
@@ -52,10 +52,10 @@ public class AuditEventRow extends EntityBeanRow<AuditEventBean, AuditEventRow> 
             answer = thisBean.getAuditTable().toLowerCase().compareTo(argBean.getAuditTable().toLowerCase());
             break;
         case AUDIT_STUDY_NAME:
-            answer = new Integer(thisBean.getStudyName()).compareTo(new Integer(argBean.getStudyName()));
+            answer = Integer.valueOf(thisBean.getStudyName()).compareTo(Integer.valueOf(argBean.getStudyName()));
             break;
         case AUDIT_SUBJECT_NAME:
-            answer = new Integer(thisBean.getSubjectName()).compareTo(new Integer(argBean.getSubjectName()));
+            answer = Integer.valueOf(thisBean.getSubjectName()).compareTo(Integer.valueOf(argBean.getSubjectName()));
             break;
         case AUDIT_CHANGES:
             // LEAVE THIS BLANK?
