@@ -44,7 +44,7 @@ import org.slf4j.LoggerFactory;
 import org.springframework.context.ApplicationContext;
 import org.springframework.scheduling.quartz.QuartzJobBean;
 
-@SuppressWarnings("deprecation")
+@SuppressWarnings("all")
 public class ExampleSpringJob extends QuartzJobBean {
     protected final Logger logger = LoggerFactory.getLogger(getClass().getName());
 
@@ -77,7 +77,7 @@ public class ExampleSpringJob extends QuartzJobBean {
     protected void executeInternal(JobExecutionContext context) throws JobExecutionException {
         // need to generate a Locale so that user beans and other things will
         // generate normally
-        Locale locale = new Locale("en-US");
+        Locale locale = Locale.of("en-US");
         ResourceBundleProvider.updateLocale(locale);
         ResourceBundle pageMessages = ResourceBundleProvider.getPageMessagesBundle();
         // logger.debug("--");
@@ -132,9 +132,9 @@ public class ExampleSpringJob extends QuartzJobBean {
             int studyId = dataMap.getInt(STUDY_ID);
 
             // String datasetId = dataMap.getString(DATASET_ID);
-            // int dsId = new Integer(datasetId).intValue();
+            // int dsId = Integer.valueOf(datasetId).intValue();
             // String userAcctId = dataMap.getString(USER_ID);
-            // int userId = new Integer(userAcctId).intValue();
+            // int userId = Integer.valueOf(userAcctId).intValue();
             // why the flip-flop? if one property is set to 'true' we can
             // see jobs in another screen but all properties have to be
             // strings
@@ -363,13 +363,11 @@ public class ExampleSpringJob extends QuartzJobBean {
             // logger.debug("-- generated file: " + fileNameStr);
             // dataSource.
         } catch (Exception e) {
-            // TODO Auto-generated catch block -- ideally should generate a fail msg here, tbh 02/2009
             logger.debug("-- found exception: ", e);
         }
     }
 
     /**
-     * TODO It looks like the fileName should contain at most one entry that maps a file name (String) to 
      * a file id (Integer). IMPLEMENT A BETTER WAY OF ACHIEVING THIS
      *  
      * @param fileName mapping of a file name to its file id
@@ -384,14 +382,13 @@ public class ExampleSpringJob extends QuartzJobBean {
     }
 
     /**
-     * TODO It looks like the fileName should contain at most one entry that maps a file name (String) to 
      * a file id (Integer). IMPLEMENT A BETTER WAY OF ACHIEVING THIS
      *  
      * @param fileName mapping of a file name to its file id
      * @return file id (value of the entry or 0 if the mapping is empty)
      */
     private int getFileIdInt(HashMap<String, Integer> fileName) {
-        Integer fileID = new Integer(0);
+        Integer fileID = Integer.valueOf(0);
         for (Integer value : fileName.values()) {
             fileID = value;
         }
